# orbitaura

./: TODO.md  app.py  project_management.db  pyproject.toml  requirements.txt
migrations/versions/: 03fad139f8f2_add_archived_field_to_project_model.py  3a295aaa86de_add_start_date_and_end_date_to_project_.py  aea27e55028b_add_notification_model.py  d80b78c393f9_add_bio_and_accomplishments_to_user.py
static/css/: index.css
static/js/: theme.js
templates/: add_task.html  calendar_view.html  edit_project.html  edit_task.html  header.html  index.html  login.html  notifications.html  overview_view.html  projects.html  register.html  search_results.html  sidebar.html  tasks.html  timeline_view.html  user_profile.html  user_settings.html
